examples/test/testpolicy15483.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15483
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key33: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value7
          key36: value33
      podSelector:
        matchLabels:
          key14: value39
          key39: value28
          key1: value19
